# crusst

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  crusst-kernel-roadmap.md
docs/: architecture.md  tutorial.md
docs/plans/: 2026-02-26-crusst-v1.1-adaptive-kernel-design.md  2026-02-26-crusst-v1.1-implementation.md  2026-02-26-crusst-v2-design.md  2026-02-27-capped-cone-gradient-fix-design.md  2026-02-27-capped-cone-gradient-fix-implementation.md  2026-02-27-fillet-chamfer-design.md  2026-02-27-fillet-chamfer-implementation.md  2026-02-28-phase1-implementation-plan.md  2026-02-28-phase1-manifold-mesh-design.md
examples/: mesh_diag.rs  viewer.rs
src/: blend.rs  builder.rs  csg.rs  dag.rs  dual_contouring.rs  export.rs  feature.rs  frame.rs  lib.rs  mesh.rs  obj_export.rs  octree.rs  path.rs  primitives.rs  qef.rs  shape.rs  step_export.rs  transport.rs  types.rs  voxel.rs
src/boolean/: mod.rs
src/curve/: mod.rs
src/export/: mod.rs  obj.rs  step.rs  stl.rs  threemf.rs
src/math/: mod.rs
src/nurbs/: basis.rs  knot.rs  mod.rs
src/ops/: chamfer.rs  fillet.rs  loft.rs  mod.rs  shell.rs  sweep.rs
tests/: blend_test.rs  builder_test.rs  capped_cone_test.rs  cone_chewy_diagnostic.rs  csg_test.rs  dag_test.rs  dc_test.rs  eigenforms_test.rs  export_test.rs  feature_test.rs  fillet_mesh_test.rs  fillet_test.rs  mesh_test.rs  octree_test.rs  path_test.rs  primitive_test.rs  primitives_test.rs  qef_test.rs  round_csg_test.rs  shape_test.rs  showcase_test.rs  step_test.rs  tessellate_test.rs  transport_test.rs  voxel_test.rs
viewer/: index.html
(+16 files in other folders)
